modified:   package.json 	modified:   public/favicon.ico 	modified:   public/index.html 	deleted:    public/logo192.png 	deleted:    public/logo512.png 	deleted:    public/manifest.json 	modified:   src/App.css 	modified:   src/App.js 	modified:   src/Filter/index.js 	modified:   src/Main/index.css 	modified:   src/Main/index.js 	modified:   src/Phonetic/index.js 	modified:   yarn.lock
	src/Phonetic/index.css

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,9 @@ body {
 .ant-input {
   background-color: black !important;
 }
+
+.githubButton {
+  position: fixed;
+  right: 50px;
+  top: 50px
+}
